--- a/public/chat.html
+++ b/public/chat.html
@@ -11,12 +11,12 @@
     />
     <link rel="icon" type="image/x-icon" href="/logo.jpg">
     <link rel="stylesheet" href="css/style.css" />
-    <title>Chit-Chat App</title>
+    <title>CryptoChat</title>
   </head>
   <body>
     <div class="chat-container">
       <header class="chat-header">
-        <h1><i class="fas fa-smile"></i> Chit-Chat</h1>
+        <h1><i class="fas fa-smile"></i>CryptoChat</h1>
         <a id="leave-btn" class="btn">Leave Room</a>
       </header>
       <main class="chat-main">
