--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
 		/>
 		<link rel="icon" type="image/x-icon" href="/logo.jpg">
 		<link rel="stylesheet" href="css/style.css" />
-		<title>Chit-Chat App</title>
+		<title>CryptoChat</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-smile"></i> Chit-Chat</h1>
+				<h1><i class="fas fa-smile"></i>CryptoChat</h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
