--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,12 @@
 					<div class="form-control">
 						<label for="room">Room</label>
 						<select name="room" id="room">
-							<option value="JavaScript">JavaScript</option>
-							<option value="Python">Python</option>
-							<option value="PHP">PHP</option>
-							<option value="C#">C#</option>
-							<option value="Ruby">Ruby</option>
-							<option value="Java">Java</option>
+							<option value="SchoolSquad">SchoolSquad</option>
+							<option value="FamConnect">FamConnect</option>
+							<option value="WorkForce">WorkForce</option>
+							<option value="CuzTalk">CuzTalk</option>
+							<option value="StudySync">StudySync</option>
+							<option value="SoulCircle">SoulCircle</option>
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
